force-app/main/default/objects/AWS_Bedrock_Config__mdt/AWS_Bedrock_Config__mdt.object-meta.xml
<CustomObject>
    <label>AWS Bedrock Config</label>
    <pluralLabel>AWS Bedrock Configs</pluralLabel>
</CustomObject>