force-app/main/default/objects/AWS_Bedrock_Config__mdt/fields/Access_Key_Id__c.field-meta.xml
<CustomField>
    <fullName>Access_Key_Id__c</fullName>
    <description>AWS Access Key ID for Bedrock API access</description>
    <label>Access Key Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>