force-app/main/default/objects/AWS_Bedrock_Config__mdt/fields/Model_Id__c.field-meta.xml
<CustomField>
    <fullName>Model_Id__c</fullName>
    <description>Claude model ID to use</description>
    <inlineHelpText>us.anthropic.claude-3-7-sonnet-20250219-v1:0</inlineHelpText>
    <label>Model Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>