force-app/main/default/objects/AWS_Bedrock_Config__mdt/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>AWS Region for Bedrock service</description>
    <inlineHelpText>us-east-1</inlineHelpText>
    <label>Region</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>