force-app/main/default/objects/AWS_Bedrock_Config__mdt/fields/Secret_Access_Key__c.field-meta.xml
<CustomField>
    <fullName>Secret_Access_Key__c</fullName>
    <description>AWS Secret Access Key for Bedrock API access</description>
    <label>Secret Access Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>